✨ Added styles for the general header and sidebar 🔧 Updated YouTube video component to use new parameter names 🐛 Fixed alignment issue with SVG icons in the header 💄 Adjusted styling of the blink editor page 🌟 Created a new layout component for Luna pages 🆕 Added a new sidebar component for Luna layout 🔀 Merged changes from branch 'blink-editor' into 'master' 📝 Updated commit message format and added emojis

--- a/assets/styles/globals.sass
+++ b/assets/styles/globals.sass
@@ -117,3 +117,6 @@ html[data-bs-theme='dark']
 @keyframes spin
 	to
 		transform: translate(-50%, -50%) rotate(360deg)
+
+svg.icon
+	vertical-align: baseline !important
